--- a/lec040-types-nested/work/hw040.md
+++ b/lec040-types-nested/work/hw040.md
@@ -22,7 +22,7 @@ Carriages can only carry a limited supply of _`tonnage`_ and only travel from In
 
 ## Tasks
 
-* Starting with the code provided in [TravelStarter.java](TravelStarter.java), define classes for `Horse` and `Carriage`. 
+* Starting with the code provided in [TravelStarter.java](TravelStarter.java), define classes for `Horse` and `Carriage`. (Note that an appropriate interface has already been defined for you in the starter code.)
 
 * In a test class, named `TravelTests.java`, define six examples of housing, including:
   * `hovel`: Capacity 5, population 1
@@ -55,3 +55,12 @@ Carriages can only carry a limited supply of _`tonnage`_ and only travel from In
 
   * Think about how this works. What **type** is the `this` in each class where the `return` statement occurs? That "static type" (i.e. determined through reading the source code) allows Java to dispatch to the appropriate version of `isValidDestination` in whatever class is appropriate to the "`to`" object. Note that we can't tell which actual concrete class the `to` object will be of, just by reading the source code. Thus, this is a "dynamic dispatch", because the decision is made when the program is actually running and execution/evaluation reaches this point in the code.
 
+
+---
+
+## Rubric
+- `Horse` and `Carriage` appropriately defined, implement common interface
+  - `from` and `to` fields have appropriate type
+- `canTravel` and `isValidDestination()` methods properly defined
+- Representative examples and test cases provided
+- Code style (indentation, spacing, class & field names, capitalization conventions)
