--- a/lec050-self-ref-fam-tree/work/hw050.md
+++ b/lec050-self-ref-fam-tree/work/hw050.md
@@ -46,6 +46,9 @@ Here is a data definition in the style of CSC120:
 
   - Design a `toString` method for the pieces. Examine the provided test cases for the format.
 
+  - Design a method `countMergedBases` that produces a count of the total number of base tiles _that have been combined into merged tiles_.
+  
+
 
 ---
 
