--- a/lec040-types-nested/work/hw040.md
+++ b/lec040-types-nested/work/hw040.md
@@ -35,7 +35,7 @@ Carriages can only carry a limited supply of _`tonnage`_ and only travel from In
 
 * Add the following method to the `ITransport` interface:
 
-      /* determines if this form of transportation can successful
+      /* determines if this form of transportation can successfully
          journey to its destination */
       public boolean canTravel();
 
