--- a/lec050-self-ref-fam-tree/work/hw050.md
+++ b/lec050-self-ref-fam-tree/work/hw050.md
@@ -38,7 +38,7 @@ Here is a data definition in the style of CSC120:
 
   - Design a method `getValue` that returns the value of a game piece. The value of a merged tile is always the sum of the values of its components.
   
-  - Design a method `biggestBase` that returns the largest base tile value that can be found in the game piece.
+  - Design a method `biggestBase` that returns the largest base tile that can be found in the game piece.
 
   - Design a method `canMerge` that determines whether `this` game piece can be merged with the given game piece to form a merged piece, according to the rules of 2048: only equal-valued pieces can merge.
 
