--- a/lec060-question-tree/work/hw060.md
+++ b/lec060-question-tree/work/hw060.md
@@ -1,6 +1,6 @@
 # More Recursion • More Methods: main, static
 
-- Create a BlueJ project folder named hw060-question-tree.
+- Create a BlueJ project folder named **`hw060-question-tree`**.
 
 # Tasks
 
