--- a/lec070-accum/work/hw070.md
+++ b/lec070-accum/work/hw070.md
@@ -1,2 +1,7 @@
-Modify the askAndLearn method so that it prints out the number of tries that it took to guess a thing. That is, it should print something like "I guessed it! That took me 2 questions." when it correctly guesses a thing.
-(Hint: overload the askAndLearn method by defining two versions in each class; one with the existing header, and one with an extra accumulator parameter that keeps track of the number of tries so far. The former should simply delegate to the second version with an initial value of 0 for the number of tries so far. Each time a question is asked, increment the accumulator parameter as the recursive call is being made.)
+# Helper methods with accumulators
+
+# Task
+
+- Modify the `askAndLearn` method so that it prints out the number of tries that it took to guess a thing. That is, it should print something like `"I guessed it! That took me 2 questions."` when it correctly guesses a thing.
+
+  (Hint: *overload* the `askAndLearn` method by defining two versions in each class; one with the existing header, and one with an extra accumulator parameter that keeps track of the number of tries so far. The former should simply delegate to the second version with an initial value of 0 for the number of tries so far. Each time a question is asked, increment the accumulator parameter as the recursive call is being made.)
