--- a/lec080-abstract/work/hw080.md
+++ b/lec080-abstract/work/hw080.md
@@ -57,9 +57,9 @@ The day when the book is taken out and the day due are counted as days since the
 Here are some test cases:
 
 ```
-	IBook b1 = new Book("The Hobbit", 45, "Tolkein");
-	IBook b2 = new RefBook("Websters", 52);
-	IBook b3 = new AudioBook("Alice in Wonderland", 38, "L.C.");
+    IBook b1 = new Book("The Hobbit", "Tolkein", 45);
+    IBook b2 = new RefBook("Websters", 52);
+    IBook b3 = new AudioBook("Alice in Wonderland", "L.C.", 38, 180);
 	
     assertEquals( -9 , b1.daysOverdue(50) );
     assertEquals( 0 , b1.daysOverdue(59) );
