--- a/lec060-question-tree/work/hw060.md
+++ b/lec060-question-tree/work/hw060.md
@@ -23,3 +23,12 @@ Starting with the [final `QuestionGame` project files](../final) from lecture, a
         ***a computer
 
 
+# Rubric
+
+- Implements `knowsAbout`
+
+- Implements `allKnownThings`
+
+- Implements `toString`
+
+- Code style (indentation, spacing, class & field names, capitalization conventions)
