--- a/lec120-simplegradebook/work/hw120.md
+++ b/lec120-simplegradebook/work/hw120.md
@@ -43,7 +43,7 @@ public class Entry
 
 2. The constructor for `LeaderBoard` should take a single integer that is the maximum number of scores to keep track of at any point in time.
 
-3. Define a function:
+3. Define a method in the `LeaderBoard`:
    
     ```
     public void add(String name, int score)
