--- a/lec150-generics/work/hw150.md
+++ b/lec150-generics/work/hw150.md
@@ -1,6 +1,6 @@
 # Abstracting types (generics) • Function objects
 
-- Download and extract the following file to a folder named **`hw150-generics`** and open it in BlueJ.
+- Download and extract the following file to a folder named **`hw150-generics`** and open it in BlueJ. Add or edit files to this project according to the tasks below and then submit your files.
     - [hw150-generics.zip](./hw150-generics.zip)
 
 ---
