--- a/lec160-java-linkedlist/work/hw160.md
+++ b/lec160-java-linkedlist/work/hw160.md
@@ -21,4 +21,6 @@ Define a new class named **`ListPractice`** with no fields and no constructor, a
 
  ---
 
- 
+Here's a walkthrough of solutions to #2 above:
+
+ <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1891971/sp/189197100/embedIframeJs/uiconf_id/28341011/partner_id/1891971?iframeembed=true&playerId=kaltura_player&entry_id=1_yroxi50b&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_atyq4u2j" width="400" height="285" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
