--- a/lec180-arrays/work/hw180.md
+++ b/lec180-arrays/work/hw180.md
@@ -7,6 +7,16 @@ Start a new BlueJ project named **hw180-arrays** and copy the following files in
 
 ---
 
+# Reading
+
+Please browse the following documentation to review what we cover in lecture about arrays.
+
+- http://greenteapress.com/thinkjava6/html/thinkjava6009.html
+- https://docs.oracle.com/javase/tutorial/java/nutsandbolts/arrays.html
+
+
+---
+
 # Task
 
 The `KickBoxer.java` program provided reads in values from the keyboard and prints the corresponding kickboxing weight-class according to the table below.
