--- a/lec220-stacks/work/hw220.md
+++ b/lec220-stacks/work/hw220.md
@@ -19,10 +19,10 @@ In this assignment, we define a new ADT that we call a `LeakyStack`. The interfa
 The diagrams at the top of <a href="http://www.mathcs.emory.edu/~cheung/Courses/171/Syllabus/8-List/array-queue2.html">this page</a> may be helpful to understand the concept of a "circular" array. You would need to allow the index of the <em>top</em>  of the stack  to progress back around to 0 once it reaches the end of the array. The modulo or remainder operator (<code>%</code> in Java) can be handy for this purpose. An expression like <code>(top + 1) % capacity</code> will increment an index forward, and make it "loop back" around to 0 when it reaches the last index in the array, assuming the array has <code>capacity</code> elements in it.
 </div>
 
-- ***Design and test*** a `LeakyStack` class that implements the `IStack<T>` interface in the files provided above, but provides a bounded capacity for the stack. The constructor, `LeakyStack(int capacity)` , should take a single integer that establishes the fixed maximum capacity of the stack. If the capacity of the stack is exhausted, then items at the bottom of the stack should be removed before adding new items. (For full credit, avoid any loops (including the use of `System.arraycopy()`) in your implementation by using a **"circular" array** (see sidebar at right).)
+- ***Design and test*** a `LeakyStack` class that implements the `IStack<T>` interface provided above, but provides a bounded capacity for the stack. The constructor, `LeakyStack(int capacity)` , should take a single integer that establishes the fixed maximum capacity of the stack. If the capacity of the stack is exhausted, then items at the bottom of the stack should be removed before adding new items. (For full credit, avoid any loops (including the use of `System.arraycopy()`) in your implementation by using a **"circular" array** (see sidebar at right).)
  
 
-- ***Design and test*** a `Tracker` class that implements the `IPageTracker` interface provided above. Use two `LeakyStack` objects as the fields of your `Tracker` class. You may add a `clear` method to your `LeakyStack` class to help implement some of the `IPageTracker` operations efficiently. (Do not add the `clear` method to the `IStack` interface, if you do that.)
+- ***Design and test*** a `Tracker` class that implements the `IPageTracker` interface in the file provided above. Use two `LeakyStack` objects as the fields of your `Tracker` class. You may add a `clear` method to your `LeakyStack` class to help implement some of the `IPageTracker` operations efficiently. (Do not add the `clear` method to the `IStack` interface, if you do that.)
 
 Here is some test code, but you should develop your own thorough test cases:
 
