--- a/lec220-stacks/work/hw220.md
+++ b/lec220-stacks/work/hw220.md
@@ -15,9 +15,6 @@ However, the history does not necessarily have unbounded capacity. In reality, t
 
 In this assignment, we define a new ADT that we call a `LeakyStack`. The interface for a `LeakyStack` is the same as that for a `Stack`. However in the case when the `capacity` is exhausted, a call to `push` will result in the placement of the new item at the expense of the loss of the least recently accessed item.
 
-<div style="width: 40%; float: right; border: 1px solid black; padding-left: .5em;">
-The diagrams at the top of <a href="http://www.mathcs.emory.edu/~cheung/Courses/171/Syllabus/8-List/array-queue2.html">this page</a> may be helpful to understand the concept of a "circular" array. You would need to allow the index of the <em>top</em>  of the stack  to progress back around to 0 once it reaches the end of the array. The modulo or remainder operator (<code>%</code> in Java) can be handy for this purpose. An expression like <code>(top + 1) % capacity</code> will increment an index forward, and make it "loop back" around to 0 when it reaches the last index in the array, assuming the array has <code>capacity</code> elements in it.
-</div>
 
 - ***Design and test*** a `LeakyStack` class that implements the `IStack<T>` interface provided above, but provides a bounded capacity for the stack. The constructor, `LeakyStack(int capacity)` , should take a single integer that establishes the fixed maximum capacity of the stack. If the capacity of the stack is exhausted, then items at the bottom of the stack should be removed before adding new items. (For full credit, avoid any loops (including the use of `System.arraycopy()`) in your implementation by using a **"circular" array** (see sidebar at right).)
  
@@ -50,3 +47,6 @@ Here is some test code, but you should develop your own thorough test cases:
 ```
 
 
+<div style="width: 40%; float: right; border: 1px solid black; padding-left: .5em;">
+*The diagrams at the top of <a href="http://www.mathcs.emory.edu/~cheung/Courses/171/Syllabus/8-List/array-queue2.html">this page</a> may be helpful to understand the concept of a "circular" array. You would need to allow the index of the <em>top</em>  of the stack  to progress back around to 0 once it reaches the end of the array. The modulo or remainder operator (<code>%</code> in Java) can be handy for this purpose. An expression like <code>(top + 1) % capacity</code> will increment an index forward, and make it "loop back" around to 0 when it reaches the last index in the array, assuming the array has <code>capacity</code> elements in it.
+</div>
