--- a/lec230-stack-apps/work/hw230.md
+++ b/lec230-stack-apps/work/hw230.md
@@ -45,7 +45,7 @@ Don't make this problem harder than it is. Read the algorithm above and make sur
 
 - Valid operands are either integer numbers or variable names made up of letters, numbers, and the underscore character. Variable names must not start with a digit, though. You may write a little function `isOperand` that uses methods from the `Character` class - `isDigit`, `isLetter` - to determine if a token is a valid operand.
   
-- To generate temporary variable names, you can just keep an integer field for the next variable and concatenate it with the string `"var"` to create a name. Increment the field value after that.
+- To generate temporary variable names, you can just keep an integer field (or local variable) for the next variable and concatenate it with the string `"var"` to create a name. Increment the field/local variable value after that.
   
 - To handle precedence, you can write a helper method that produces a precedence value (integer) for a given operator, then you can use relational operators <=, >=, etc. to compare the precedence of operators.
   
