--- a/lec220-stacks/work/hw220.md
+++ b/lec220-stacks/work/hw220.md
@@ -44,6 +44,7 @@ Here is some test code, but you should develop your own thorough test cases:
     history.visit("amazon");
     assertEquals("catalog", history.goBack(5));
     assertEquals("Home", history.goBack(1));
+    assertEquals("catalog", history.goForward(1));
 ```
 
 
