--- a/lec280-bst/work/hw280.md
+++ b/lec280-bst/work/hw280.md
@@ -4,7 +4,7 @@ Start a new BlueJ project named **hw280-bst** and copy the [BST.java](../code/BS
 
 ---
 
-# Task 1 - Binary Search Tree Iterator
+# Task 1 - Binary Search Tree Iterator (Guided Exercise)
 
 Implement an iterator over the binary search tree (BST) code provided in class. Your iterator should be initialized with the root node of the BST. Calling next() should return the next smallest key in the BST.
 
@@ -41,5 +41,49 @@ Make sure to test your code. (Create a test class, add some elements to a BST, t
 
 ---
 
-Task 2 - Lowest Common Ancestor
+# Task 2 - Lowest Common Ancestor
+
+Implement a method in the BST class:
+
+```
+public Key lowestCommonAncestor(Key k1, Key k2)
+```
+
+that produces the key of the node that is the lowest common ancestor (LCA) of two given keys in the BST. If one or both of `k1` and `k2` are not keys in the tree, the method should return `null`.
+
+According to the definition of [LCA on Wikipedia](https://en.wikipedia.org/wiki/Lowest_common_ancestor): "The lowest common ancestor is defined between two nodes *v* and *w* as the lowest node in T that has both *v* and *w* as descendants (where we allow a node to be a descendant of itself)."
+
+For example, in the tree below, the lowest common ancestor (LCA) of nodes 2 and 8 is 6. Another example is LCA of nodes 2 and 4 is 2, since a node can be a descendant of itself according to the LCA definition.
+
+```
+        _______6______
+       /              \
+    ___2__          ___8__
+   /      \        /      \
+   0      _4       7       9
+         /  \
+         3   5
+```
+
+## Approach
+
+(You should first verify that the given keys occur in the tree.)
+
+Since this is a Binary Search Tree, we know that the left node will be smaller than or equal to the root node and the right node will be greater than the root node. This basically involves checking the below edge cases:
+
+1. If root is null, then return null
+1. If both the keys given are same, return the key.
+1. If either of the nodes is the root node then root node is the LCA (Lowest Common Ancestor)
+1. If one of the nodes is greater than the root and another is less than the root then root is the LCA
+1. If both nodes are smaller than the root, then recursively call the LCA function to compute steps 1 to 4 on the left node of the root.
+1. If both nodes are greater than the root, then recursively call the LCA function to compute steps 1 to 4 on the right node of the root.
+
+### Run Time
+
+Assuming that the tree is balanced, worst case run time should be *O(log n)*. This is because each time we are either processing the left side of the binary search tree or the right side of the binary search tree.
+
+---
+
+<center>
+<img src="../../3d-small-people-all-is-well-a-little-man-lies-on-a-big-positive-symbol-drawing_csp25435404.jpg" width="150px"></center>
 
