--- a/lec290-300-pq-heap/work/hw301.md
+++ b/lec290-300-pq-heap/work/hw301.md
@@ -32,6 +32,8 @@ that opens the input file with given name, reads it in character by character (u
 You can use `print`/`printf`/`println` statements on the `out` object.
 
 - Here is an approach to storing a binary tree as a binary sequence: Starting at the root, recursively perform a *preorder* traversal of all the nodes of the tree. As you visit each node, if it is an internal (non-leaf) node, then print a "0". Otherwise, for a leaf node, print a "1" and then an 8-bit representation (see next point) of the ASCII code for the character at that leaf. 
+
+    Here is a screencast explaining this: https://mediaspace.berry.edu/media/huffman+binary+tree+encoding/1_9suxib0p
   
 - The following statement converts a character to "binary” representation as a String, uses a helper function, `pad` (that you would have to write), to fill in any extra `"0"`s to the left to make it 8-bits long, and prints it to an output PrintWriter object.
 
