--- a/lec290-300-pq-heap/work/hw302.md
+++ b/lec290-300-pq-heap/work/hw302.md
@@ -8,7 +8,7 @@ Use your files from **hw301-huffman**.
 
 # Tasks
 
-- Finish the `decode` method in `HuffmanCode.java`.
+- Define a `decodeNext` method in `HuffmanCode.java` as described below.
 
 - Implement a `decompress` method in the Huffman class that opens an input file containing only "0" and "1" characters in the format you developed for the compression assignment, decodes it, and writes the resulting "decompressed" data to an output file.
 
