update latex formulas

--- a/lec020-methods/work/hw020.md
+++ b/lec020-methods/work/hw020.md
@@ -50,13 +50,21 @@
     You should put all tests related to a single operation (e.g. plus, minus, etc.) in a single test method in your test class. That is, define test methods named  `testPlus`, `testMinus`, etc., each containing several tests focused on that particular operation.
 
     Note the following formulas for rational operations: 
-    - $\frac{a}{b} + \frac {c}{d} = \frac{ad+cb}{bd}$
+    - <img src="https://render.githubusercontent.com/render/math?math=\frac{a}{b}%20%2B%20\frac%20{c}{d}%20=%20\frac{ad%2Bcb}{bd}">
+
+    - <img src="https://render.githubusercontent.com/render/math?math=\frac{a}{b}%20-%20\frac%20{c}{d}%20=%20\frac{ad-cb}{bd}">
+    
+    - <img src="https://render.githubusercontent.com/render/math?math=\frac{a}{b}%20\times%20\frac%20{c}{d}%20=%20\frac{ac}{bd}">
+   
+    - <img src="https://render.githubusercontent.com/render/math?math=\frac{a}{b}%20\div%20\frac%20{c}{d}%20=%20\frac{ad}{bc}">
+ 
+<!--    - $\frac{a}{b} + \frac {c}{d} = \frac{ad+cb}{bd}$ 
 
     - $\frac{a}{b} - \frac {c}{d} = \frac{ad-cb}{bd}$
 
     - $\frac{a}{b} \times \frac {c}{d} = \frac{ac}{bd}$
 
-    - $\frac{a}{b} \div \frac {c}{d} = \frac{ad}{bc}$
+    - $\frac{a}{b} \div \frac {c}{d} = \frac{ad}{bc}$ -->
 
 <!---
 (boolean equals(Object that) - is this number equal to that ? (You will need to ask for help from me on this.))
