--- a/lec110-ll-gradebook/work/hw110.md
+++ b/lec110-ll-gradebook/work/hw110.md
@@ -45,12 +45,12 @@ Here are some test cases
 
         // PART 3
         assertEquals("100,89,65", llg.toString());
-        llg.removeLast();
-        llg.removeLast();
+        llg.removeLastAdded();
+        llg.removeLastAdded();
         assertEquals("65", llg.toString());
-        llg.removeLast();
+        llg.removeLastAdded();
         assertEquals("", llg.toString());
-        llg.removeLast();           // shouldn't do anything
+        llg.removeLastAdded();           // shouldn't do anything
         assertEquals("", llg.toString());
 
         // PART 4
