--- a/lec040-types-nested/work/hw040.md
+++ b/lec040-types-nested/work/hw040.md
@@ -4,7 +4,7 @@
 
 ## Background
 
-We’ve been asked to help build a new medeival adventuring game, _Summer Is Coming_. We’re trying to figure out the gameplay mechanics, so we’re starting with representations for travel around the universe. Players can live in three types of _housing_: a `Hut`, an `Inn`, and a `Castle`.
+We’ve been asked to help build a new medieval adventuring game, _Summer Is Coming_. We’re trying to figure out the gameplay mechanics, so we’re starting with representations for travel around the universe. Players can live in three types of _housing_: a `Hut`, an `Inn`, and a `Castle`.
 
 A `Hut` has a `capacity` and the current count of its `population`. The population must be less than the capacity.
 
