Changed GamePiece to IGamePiece

--- a/lec050-self-ref-fam-tree/work/hw050.md
+++ b/lec050-self-ref-fam-tree/work/hw050.md
@@ -13,7 +13,7 @@ Here is a data definition in the style of CSC120:
     ;; A GamePiece is one of:
     ;; -- (make-base-tile Number)
     ;; -- (make-merge-tile GamePiece GamePiece)
-     
+
     (define-struct base-tile [value])
     (define-struct merge-tile [piece1 piece2])
 
@@ -24,20 +24,20 @@ Here is a data definition in the style of CSC120:
 
   Here are some examples of data:
 
-      GamePiece b2 = new BaseTile();  // value should be 2
-      GamePiece b4 = new BaseTile(4);
-      GamePiece b8 = new BaseTile(8);
-      GamePiece b16 = new BaseTile(16);
-      GamePiece m4 = new MergeTile(b2, b2);
-      GamePiece m12 = new MergeTile(b4, b8);
-      GamePiece m16 = new MergeTile(b8, new MergeTile(b4, b4));
-      GamePiece m64 = new MergeTile(new MergeTile(m16, b16),
+      IGamePiece b2 = new BaseTile();  // value should be 2
+      IGamePiece b4 = new BaseTile(4);
+      IGamePiece b8 = new BaseTile(8);
+      IGamePiece b16 = new BaseTile(16);
+      IGamePiece m4 = new MergeTile(b2, b2);
+      IGamePiece m12 = new MergeTile(b4, b8);
+      IGamePiece m16 = new MergeTile(b8, new MergeTile(b4, b4));
+      IGamePiece m64 = new MergeTile(new MergeTile(m16, b16),
                                     new MergeTile(m16, m16));
 
 - With the game-piece classes above, design the following methods. A set of basic test cases is provided to you [in this file](Game2048Tests.java).
 
   - Design a method `getValue` that returns the value of a game piece. The value of a merged tile is always the sum of the values of its components.
-  
+
   - Design a method `biggestBase` that returns the largest base tile that can be found in the game piece.
 
   - Design a method `canMerge` that determines whether `this` game piece can be merged with the given game piece to form a merged piece, according to the rules of 2048: only equal-valued pieces can merge.
@@ -47,7 +47,7 @@ Here is a data definition in the style of CSC120:
   - Design a `toString` method for the pieces. Examine the provided test cases for the format.
 
   - Design a method `countMergedBases` that produces a count of the total number of base tiles _that have been combined into merged tiles_.
-  
+
 
 
 ---
@@ -58,4 +58,3 @@ Here is a data definition in the style of CSC120:
 - Overloaded constructors for base tile
 - Passes provided examples and test cases
 - Code style (indentation, spacing, class & field names, capitalization conventions)
-
