--- a/lec110-ll-gradebook/work/hw110.md
+++ b/lec110-ll-gradebook/work/hw110.md
@@ -15,7 +15,11 @@ Add the following methods to the `LLGradebook` class. For this assignment, you s
 
 1. A method, `public void addSorted(int g)`, which updates the list of grades in this book by adding the given grade in sorted order (descending). You may need to check two special cases, (1) `this.head == null` (in which case you can just add the grade as usual, `this.addGrade(g);`) and (2) `g > this.head.value` (in which case you need to make a new node that will become the head). Other than these two cases, I would suggest setting up a `cur` variable that walks through the list as long as `cur.next.value > g`. That it, as long as the node *after* `cur` has a value greater than `g`, then `g` needs to go somewhere further down the list. When this is no longer the case, then create a new node and link it into the list right after `cur`.
 
-Here are some test cases
+   (After you work on this task - `addSorted`, the `removeLastAdded` may not be entirely correct any more; that's fine. Ignore that issue for now.)
+
+## Test Cases
+
+Here are some test cases:
 
 ```
     @Test 
