--- a/lec110-ll-gradebook/work/hw110.md
+++ b/lec110-ll-gradebook/work/hw110.md
@@ -40,10 +40,10 @@ Here are some test cases:
         assertEquals(6, llg.countBetween(0, 100));
 
         // PART 2
-        llg.removeLast();
+        llg.removeLastAdded();
         assertEquals(2, llg.countBetween(80, 89));
-        llg.removeLast();
-        llg.removeLast();
+        llg.removeLastAdded();
+        llg.removeLastAdded();
         assertEquals(2, llg.countBetween(80, 100));
         assertEquals(3, llg.count());
 
