--- a/lec190-arraylist/work/hw190.md
+++ b/lec190-arraylist/work/hw190.md
@@ -36,7 +36,11 @@ One detail about Java: you can’t instantiate an array using a type parameter; 
    array = new E[10];
 ```
 
-To work around this limitation, you have to instantiate an array of Object and then typecast it. You can read more about this issue at http://thinkdast.com/generics.
+To work around this limitation, you have to instantiate an array of `Object` and then typecast it, like this:
+
+```
+   array = (E[])new Object[10];
+```
 
 For the methods of the class, let’s look at `get`; then you can get started on the exercises.
 
