--- a/lec220-stacks/work/hw220.md
+++ b/lec220-stacks/work/hw220.md
@@ -16,7 +16,7 @@ However, the history does not necessarily have unbounded capacity. In reality, t
 In this assignment, we define a new ADT that we call a `LeakyStack`. The interface for a `LeakyStack` is the same as that for a `Stack`. However in the case when the `capacity` is exhausted, a call to `push` will result in the placement of the new item at the expense of the loss of the least recently accessed item.
 
 
-- ***Design and test*** a `LeakyStack` class that implements the `IStack<T>` interface provided above, but provides a bounded capacity for the stack. The constructor, `LeakyStack(int capacity)` , should take a single integer that establishes the fixed maximum capacity of the stack. If the capacity of the stack is exhausted, then items at the bottom of the stack should be removed before adding new items. (For full credit, avoid any loops (including the use of `System.arraycopy()`) in your implementation by using a **"circular" array** (see note at the bottom of the page).)
+- ***Design and test*** a `LeakyStack` class that implements the `IStack<T>` interface provided above, but provides a bounded capacity for the stack. The constructor, `LeakyStack(int capacity)` , should take a single integer that establishes the fixed maximum capacity of the stack. If the capacity of the stack is exhausted, then items at the bottom of the stack should be removed before adding new items. (For full credit, avoid any loops (including the use of `System.arraycopy()`) in your implementation by using a **"circular" array** (\*\*see note at the bottom of the page).)
  
 
 - ***Design and test*** a `Tracker` class that implements the `IPageTracker` interface in the file provided above. Use two `LeakyStack` objects as the fields of your `Tracker` class. You may add a `clear` method to your `LeakyStack` class to help implement some of the `IPageTracker` operations efficiently. (Do not add the `clear` method to the `IStack` interface, if you do that.)
