--- a/lec230-stack-apps/work/hw230.md
+++ b/lec230-stack-apps/work/hw230.md
@@ -17,10 +17,10 @@ mul b 3 ==> d
 
 There are four assembly instructions, corresponding to the basic arithmetic operations: mul, div, add, sub.
 
-Your final program should read an expression from standard input (keyboard) and print to standard output the compiled result: (the underlined portion below represents the user's input):
+Your final program should read an expression from standard input (keyboard) and print to standard output the compiled result: (the first line, prefixed by `>>>`, below represents the user's input):
 
 ```
-a + b - 56 * 34 / b3_3f
+>>> a + b - 56 * 34 / b3_3f
 add   a   b ==>   var000
 mul   56   34 ==>   var001
 div   var001   b3_3f ==>   var002
