--- a/lec230-stack-apps/work/hw230.md
+++ b/lec230-stack-apps/work/hw230.md
@@ -45,11 +45,11 @@ Don't make this problem harder than it is. Read the algorithm above and make sur
 
 - Valid operands are either integer numbers or variable names made up of letters, numbers, and the underscore character. Variable names must not start with a digit, though. You may write a little function `isOperand` that uses methods from the `Character` class - `isDigit`, `isLetter` - to determine if a token is a valid operand.
   
-- To generate temporary variable names, you can just keep an integer field (or local variable) for the next variable and concatenate it with the string `"var"` to create a name. Increment the field/local variable value after that.
+- To generate temporary variable names, you can just keep an integer field (or local variable) for the next variable and concatenate it with the string `"var"` to create a name. Increment the field/local variable value after that. (Hint: Use something like `String newVarName = String.format("var%03d",  counter);` to format the variable name as shown in the output above. You can search online for information about Java's `String.format` method, e.g. https://dzone.com/articles/java-string-format-examples)
   
 - To handle precedence, you can write a helper method that produces a precedence value (integer) for a given operator, then you can use relational operators <=, >=, etc. to compare the precedence of operators.
   
-- To tokenize the input, you can use the split method of String - as in [Evaluate.java](Evaluate.java). (The `" +"` argument in the call to split is a regular expression pattern that describes one or more spaces.)
+- To tokenize the input, you can use the `Scanner.next()` method - as in the [../final/InfixToPostfix.java](InfixToPostfix.java) example from class. Or you can read in a whole line at a time with `nextLine` and use the `split` method of String - as in [Evaluate.java](Evaluate.java). (The `" +"` argument in the call to split is a regular expression pattern that describes one or more spaces.)
 
 
 
