--- a/lec230-stack-apps/work/hw230.md
+++ b/lec230-stack-apps/work/hw230.md
@@ -49,7 +49,7 @@ Don't make this problem harder than it is. Read the algorithm above and make sur
   
 - To handle precedence, you can write a helper method that produces a precedence value (integer) for a given operator, then you can use relational operators <=, >=, etc. to compare the precedence of operators.
   
-- To tokenize the input, you can use the `Scanner.next()` method - as in the [../final/InfixToPostfix.java](InfixToPostfix.java) example from class. Or you can read in a whole line at a time with `nextLine` and use the `split` method of String - as in [Evaluate.java](Evaluate.java). (The `" +"` argument in the call to split is a regular expression pattern that describes one or more spaces.)
+- To tokenize the input, you can use the `Scanner.next()` method - as in the [InfixToPostfix.java](../final/InfixToPostfix.java) example from class. Or you can read in a whole line at a time with `nextLine` and use the `split` method of String - as in [Evaluate.java](Evaluate.java). (The `" +"` argument in the call to split is a regular expression pattern that describes one or more spaces.)
 
 
 
