--- a/lec290-310-hash-intro/work/hw310.md
+++ b/lec290-310-hash-intro/work/hw310.md
@@ -1,6 +1,6 @@
 # Dictionaries/Maps: Application
 
-Use your [Chainword](chainword.zip) files from class.
+Use your [Chainword](../chainword.zip) files from class.
 
 ---
 
