--- a/lec320-330-pq-heap/work/hw331.md
+++ b/lec320-330-pq-heap/work/hw331.md
@@ -5,7 +5,7 @@ For this assignment, you are to write a program that compresses (encodes) a text
 Create a new project named **hw331-huffman**. A set of initial code files are provided here:
  - [hw331-starter-code](hw331-starter/)
 
-You will also need your completed `FrequencyTable` from an [earlier homework](../../lec290-310-hash-intro/work/hw300.md).
+You will also need your completed `FrequencyTable` from an [earlier homework](../../lec290-310-hash-intro/work/hw290.md#dictionariesmaps-hashing-introduction).
 
 
 
