--- a/lec320-330-pq-heap/work/hw331.md
+++ b/lec320-330-pq-heap/work/hw331.md
@@ -7,7 +7,9 @@ Create a new project named **hw331-huffman**. A set of initial code files are pr
 
 You will also need your completed `FrequencyTable` from an [earlier homework](../../lec290-310-hash-intro/work/hw290.md#dictionariesmaps-hashing-introduction).
 
-
+Here are some slides that cover what we went over in lecture
+ - [Compression and encodings, including Huffman](https://algs4.cs.princeton.edu/lectures/keynote/55DataCompression-2x2.pdf)
+  - [Huffman coding demo (movie file)](https://algs4.cs.princeton.edu/lectures/demo/55DemoHuffman.mov)
 
 ---
 
